cluster/oauth2-proxy/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: oauth2-proxy
  labels:
    pod-security.kubernetes.io/enforce: restricted
